--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-sweetalert2": "^0.6.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
