--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-sweetalert2": "^0.6.0",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
